plugins {
	id 'java-library'
	id 'com.google.protobuf' version '0.9.4'
	id 'eclipse'
}

group = 'etri'
version = '24.01.12'

java {
	sourceCompatibility = JavaVersion.VERSION_17
	targetCompatibility = JavaVersion.VERSION_17
}
[compileJava,compileTestJava]*.options*.encoding = 'UTF-8'

protobuf {
    protoc {
        artifact = "com.google.protobuf:protoc:3.25.2"
    }
    plugins {
        grpc {
            artifact = 'io.grpc:protoc-gen-grpc-java:1.60.1'
        }
    }
    generateProtoTasks {
    	ofSourceSet('main').configureEach {
    		plugins {
            	grpc {}
            }
        }
    }
}

sourceSets {
	main {
		proto {
			srcDirs 'src/main/proto'
		}
		java {
			srcDirs 'build/generated/source/proto/main/grpc'
			srcDirs 'build/generated/source/proto/main/java'
		}
	}
}

ext {
	logback_version = '1.3.14'
	javax_annotation_version = '1.3.2'
	grpc_version = '1.60.1'
	protobuf_version = '3.25.2'
	
	junit_version = '4.12'
	mockito_version = '3.2.4'
	hamcrest_version = '1.3'
}

repositories {
	mavenCentral()
}

dependencies {
	implementation project(":utils")
	
	// Logback
	implementation "ch.qos.logback:logback-classic:${logback_version}"
	
	// grpc
	implementation "io.grpc:grpc-netty-shaded:${grpc_version}"
	implementation "io.grpc:grpc-stub:${grpc_version}"
	implementation "io.grpc:grpc-protobuf:${grpc_version}"
	implementation "com.google.protobuf:protobuf-java-util:${protobuf_version}"
	implementation "javax.annotation:javax.annotation-api:${javax_annotation_version}"
	
	// test
	testImplementation "junit:junit:${junit_version}"
	testImplementation "org.mockito:mockito-core:${mockito_version}"
	testImplementation "org.hamcrest:hamcrest-all:${hamcrest_version}"
}

tasks.processResources {
	exclude("**/base.proto")
	exclude("**/stream.proto")
}

tasks.named('test') {
	useJUnit()
	jvmArgs '--add-opens=java.base/java.lang=ALL-UNNAMED'
}

eclipse {
	classpath {
		defaultOutputDir = file('build/classes/java/main')
		file {
			whenMerged { cp ->
				cp.entries.each { entry ->
					if (entry.kind == 'src' && entry.path == 'src/main/java') {
						entry.output = 'build/classes/java/main'
					}
					if (entry.kind == 'src' && entry.path == 'build/generated/source/proto/main/java') {
						entry.output = 'build/classes/java/main'
					}
					if (entry.kind == 'src' && entry.path == 'build/generated/source/proto/main/grpc') {
						entry.output = 'build/classes/java/main'
					}
					if (entry.kind == 'src' && entry.path == 'src/main/resources') {
						entry.output = 'build/classes/java/main'
					}
					if (entry.kind == 'src' && entry.path == 'src/test/java') {
						entry.output = 'build/classes/java/test'
					}
					if (entry.kind == 'src' && entry.path == 'build/generated/source/proto/test/java') {
						entry.output = 'build/classes/java/test'
					}
				}
			}
		}
	}
}

